Sustituyendo qw | QW por sql | SQL

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,14 +8,14 @@ body {
         background-size: 50% auto;
     }
 }
-#qwInfo {
+#sqlInfo {
     line-height: 2.5em;
     margin-bottom: 1em;
 }
-#qwInfo p {
+#sqlInfo p {
     line-height: 1.5em;
 }
-#qwContentContainer {
+#sqlContentContainer {
     -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
     box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
 }
